# pl-parser

./: README.md  pyproject.toml
.github/workflows/: claude.yml
pl_parser/: main.py  pdf_analyser.py
