[project]
name = "pl-parser"
version = "0.1.0"
description = "Simple PDF parser for typed document."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.25.3",
]

[project.scripts]
pl-parser = "pl_parser.main:main"
pdf-analyser = "pl_parser.pdf_analyser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
